# fastapi-template

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 2021-10-15_0fa259525566_create-books-table.py
app/: config.py  constants.py  exceptions.py  logger.py  main.py  utils.py
app/apis/: configure_app.py  health.py  utils.py
app/apis/api_v1/: book.py  router.py
app/db/: base.py  base_class.py  session.py
app/db/models/: __init__.py  book.py
app/entities/: __init__.py  book.py  message.py
app/services/: book_service.py
deployments/k8s/: README.md
deployments/k8s/app/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.stg.yaml
deployments/k8s/app/templates/: deployment.yaml
scripts/: pre_start.py
tests/: conftest.py
tests/apis/: test_health.py
tests/apis/api_v1/: test_book.py
tests/db/: session.py
tests/entities/: test_book.py  test_message.py
tests/services/: test_book_service.py
tests/utils/: create_resources.py
